fix(Responsive): :bug: fix wrapped text

--- a/css/app.css
+++ b/css/app.css
@@ -287,6 +287,7 @@ a:hover {
 .lbn-navbar-link-block {
     position: relative;
     user-select: none;
+    white-space: nowrap;
 }
 .lbn-navbar-link-block.active {
     font-weight: 700;
